--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview", 
-    "serve-json" : "json-server --watch db.json"
+    "preview": "vite preview",
+    "serve-json": "json-server --watch db.json"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.1",
@@ -21,12 +21,15 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-pro-sidebar": "^1.1.0",
-    "react-router-dom": "^7.0.1"
+    "react-router-dom": "^7.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.15.0",
     "eslint-plugin-react-hooks": "^5.0.0",
