--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.1",
+    "@schedule-x/drag-and-drop": "^2.12.1",
+    "@schedule-x/event-modal": "^2.12.1",
+    "@schedule-x/events-service": "^2.12.1",
+    "@schedule-x/react": "^2.12.1",
+    "@schedule-x/theme-default": "^2.12.1",
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
     "json-server": "^1.0.0-beta.3",
